master-cloudformation.json
{
    "Resources": {
      "cfVPC": {
        "Type": "AWS::EC2::VPC",
        "Properties": {
          "CidrBlock": "10.0.0.0/16",
          "EnableDnsSupport": "true",
          "EnableDnsHostnames": "true"
        }
      },
      "cfSubnet1": {
        "Type": "AWS::EC2::Subnet",
        "Properties": {
          "VpcId": {
            "Ref": "cfVPC"
          },
          "CidrBlock": "10.0.1.0/24",
          "MapPublicIpOnLaunch": true,
          "AvailabilityZone": "ap-south-1a"
        }
      },
      "DistributedLlmEC2": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
          "ImageId": "ami-03f4878755434977f",
          "InstanceType": "t2.micro",
          "KeyName": "kp1",
          "UserData": {
            "Fn::Base64": {
                "Fn::Join": [
                  "",
                  [
                    "#!/bin/bash\n",
                    "apt update -y\n",
                    "apt install git -y\n",
                    "apt install nodejs -y\n",
                    "node -v\n",
                    "git clone https://github.com/devashish234073/distributed_llm\n",
                    "cd distributed_llm\n",
                    "git checkout using_web_sockets\n",
                    "node master-server.js&\n"
                  ]
                ]
            }
          },
          "Tags": [{
            "Key": "Name",
            "Value": "DistributedLlmEC2"
          }],
          "NetworkInterfaces": [
            {
              "DeviceIndex": "0",
              "PrivateIpAddress": "10.0.1.10",
              "AssociatePublicIpAddress": "true",
              "DeleteOnTermination": "true",
              "SubnetId": {
                "Ref": "cfSubnet1"
              },
              "GroupSet": [
                {
                  "Ref": "MySecurityGroup"
                }
              ]
            }
          ]
        }
      },
      "MySecurityGroup": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "VpcId": {
            "Ref": "cfVPC"
          },
          "GroupDescription": "Allow SSH and HTTP traffic",
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": 22,
              "ToPort": 22,
              "CidrIp": "0.0.0.0/0"
            },
            {
              "IpProtocol": "tcp",
              "FromPort": 3000,
              "ToPort": 3000,
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "SecurityGroupEgress": [
            {
              "IpProtocol": "-1",
              "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      },
      "MyInternetGateway": {
        "Type": "AWS::EC2::InternetGateway",
        "Properties": {}
      },
      "GatewayAttachment": {
        "Type": "AWS::EC2::VPCGatewayAttachment",
        "Properties": {
          "VpcId": {
            "Ref": "cfVPC"
          },
          "InternetGatewayId": {
            "Ref": "MyInternetGateway"
          }
        }
      },
      "PublicRouteTable": {
        "Type": "AWS::EC2::RouteTable",
        "Properties": {
          "VpcId": {
            "Ref": "cfVPC"
          }
        }
      },
      "PublicRoute": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "GatewayAttachment",
        "Properties": {
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          },
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {
            "Ref": "MyInternetGateway"
          }
        }
      },
      "PublicSubnet1RouteTableAssociation": {
        "Type": "AWS::EC2::SubnetRouteTableAssociation",
        "Properties": {
          "SubnetId": {
            "Ref": "cfSubnet1"
          },
          "RouteTableId": {
            "Ref": "PublicRouteTable"
          }
        }
      },
      "MyNetworkAcl": {
        "Type": "AWS::EC2::NetworkAcl",
        "Properties": {
          "VpcId": {
            "Ref": "cfVPC"
          }
        }
      },
      "MyNetworkAclEntryIngress1": {
        "Type": "AWS::EC2::NetworkAclEntry",
        "Properties": {
          "NetworkAclId": {
            "Ref": "MyNetworkAcl"
          },
          "RuleNumber": 100,
          "Protocol": "6",
          "RuleAction": "allow",
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "PortRange": {
            "From": 22,
            "To": 22
          }
        }
      },
      "MyNetworkAclEntryEgress1": {
        "Type": "AWS::EC2::NetworkAclEntry",
        "Properties": {
          "NetworkAclId": {
            "Ref": "MyNetworkAcl"
          },
          "RuleNumber": 100,
          "Protocol": "6",
          "RuleAction": "allow",
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "PortRange": {
            "From": 22,
            "To": 22
          }
        }
      }
    }
  }
